# rag-eval-technical-docs

./: .gitignore  LICENSE  README.md
django_docs/: corpus.yaml  metadata.json
git_docs/: corpus.yaml  metadata.json
kubernetes_docs/: corpus.yaml  metadata.json
python_stdlib/: corpus.yaml  metadata.json
rust_book/: corpus.yaml  metadata.json
scripts/: Makefile  README.md  config.yaml  download_docs.py  extract_docs.py  pyproject.toml
scripts/converters/: __init__.py  asciidoc.py  base.py  docbook.py  identity.py  mdx.py  rst.py
scripts/extractors/: __init__.py  base.py  git_clone.py
